--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-form-data": "^2.0.19",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.1.4"
   }
 }
